--- a/public/index.html
+++ b/public/index.html
@@ -562,6 +562,7 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2021.04.04] YSgem Junior CUP 4位</li>
                     <li>- [2021.03.07] RANTEC CUP U-9 準優勝</li>
                     <li>- [2020.12.27] 入二杯 準優勝</li>
                     <li>- [2020.11.15] Ｎリーグ（Ｂリーグ） 優勝</li>
