--- a/public/index.html
+++ b/public/index.html
@@ -514,6 +514,7 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2021.03.31] ジャパンカップ 優勝</li>
                     <li>- [2020.11] かわしん杯 ブルー：ベスト8 ホワイト：ベスト16</li>
                     <li>- [2020.08.16] カルペソールサマーカップ 優勝</li>
                     <li>- [2020.07.23] 全力蹴球カップ 準優勝</li>
@@ -533,7 +534,9 @@
                 <div class="col-lg-6 col-md-7">
                   <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                     <button type="button" class="btn btn-secondary">2022年</button>
-                    <button type="button" class="btn btn-secondary">2021年</button>
+                    <a class="btn btn-primary"
+                      href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSzxx10-oc3nKnlxtXZW36fwnEgfU3P3hQmFEQiowjMMz452yZpSH4RRSSHLZsHaQ/pubhtml?gid=1634873165&single=true"
+                      role="button" target="_blank">2021年</a>
                     <a class="btn btn-primary"
                       href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTSuoQfroGv0MpTd5zXev_Wm9tyuKU80r0sZZe7l4EMUtB5EoaplrXiqdoL48E7Ww/pubhtml?gid=1634873165&single=true"
                       role="button" target="_blank">2020年</a>
