6年生 2021年度の試合結果ページを追加

--- a/public/index.html
+++ b/public/index.html
@@ -482,7 +482,9 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
-                    <button type="button" class="btn btn-secondary">2021年</button>
+                    <a class="btn btn-primary"
+                      href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTNEPYl43M4tfcjpcxGjJrVjeTq0C6U7pt8Ez8fxAjuPLqKy2hGlRwwdRl8bxIs-Tg27ofoj5kg6wBA/pubhtml?gid=1323340164&single=true"
+                      role="button" target="_blank">2021年</a>
                     <a class="btn btn-primary"
                       href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTNEPYl43M4tfcjpcxGjJrVjeTq0C6U7pt8Ez8fxAjuPLqKy2hGlRwwdRl8bxIs-Tg27ofoj5kg6wBA/pubhtml?gid=1148299851&single=true"
                       role="button" target="_blank">2020年</a>
