6年生の戦績を追加

--- a/public/index.html
+++ b/public/index.html
@@ -461,6 +461,7 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2021.05.05] 斎藤旗争奪第43回川崎市春季少年サッカー大会 ベスト4</li>
                     <li>- [2021.02.20] 第12回 川崎ケーブルテレビ杯 新人戦 サッカー大会 ベスト4</li>
                     <li>- [2021.02.13] 全力蹴球カップ チャンピオンシップ 3位</li>
                     <li>- [2020.12.20] 第12回 川崎ケーブルテレビ杯 新人戦 サッカー大会 中原区 1位</li>
