--- a/public/index.html
+++ b/public/index.html
@@ -568,6 +568,8 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2021.05.16] 第88回湘南チャレンジ杯（Bチーム）優勝</li>
+                    <li>- [2021.05.04] 全力中原区祭 準優勝</li>
                     <li>- [2021.04.04] YSgem Junior CUP 4位</li>
                     <li>- [2021.03.07] RANTEC CUP U-9 準優勝</li>
                     <li>- [2020.12.27] 入二杯 準優勝</li>
