--- a/public/index.html
+++ b/public/index.html
@@ -666,6 +666,7 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2021.07.11] 第38回川崎市春季低学年大会 ベスト8</li>
                     <li>- [2021.05.22] おそうじ天下杯ピュアナノCUP 3位</li>
                     <li>- [2021.05.04] 川崎市中原区春季低学年大会 4位</li>
                     <li>- [2021.03.27] ラゾクラック杯1年生大会 3位</li>
