--- a/public/index.html
+++ b/public/index.html
@@ -729,7 +729,8 @@
                     <button type="button" class="btn btn-secondary">2024年</button>
                     <button type="button" class="btn btn-secondary">2023年</button>
                     <button type="button" class="btn btn-secondary">2022年</button>
-                    <button type="button" class="btn btn-secondary">2021年</button>
+                    <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2014/result/result1.htm"
+                      role="button" target="_blank">2021年</a>
                   </div>
                 </div>
               </div>
