--- a/public/index.html
+++ b/public/index.html
@@ -729,7 +729,7 @@
                     <button type="button" class="btn btn-secondary">2024年</button>
                     <button type="button" class="btn btn-secondary">2023年</button>
                     <button type="button" class="btn btn-secondary">2022年</button>
-                    <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2014/result/result1.htm"
+                    <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/1WknV_QaDN9qFo5C6YK8mU9xwA_D0-SEdyzP8Lkj1kDo/edit#gid=0"
                       role="button" target="_blank">2021年</a>
                   </div>
                 </div>
