--- a/public/index.html
+++ b/public/index.html
@@ -621,6 +621,7 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2021.09.11] Ｎリーグ（Ｂリーグ） 優勝</li>
                     <li>- [2020.12.20] 川崎低学年大会チャンピオンズリーグ 優勝</li>
                     <li>- [2020.10.25] 川崎市中原区春季低学年大会 優勝</li>
                     <li>- [2020.07.24] 全力蹴球カップ 3位</li>
