--- a/public/index.html
+++ b/public/index.html
@@ -513,10 +513,11 @@
             <div class="card-body text-primary">
               <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-5 team-photo-box">
-                  <img src="images/fc2010.jpg" alt="Image" class="img-fluid team-photo">
+                  <img src="images/fc2010_202109.jpg" alt="Image" class="img-fluid team-photo">
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2021.10.16] ハンガリー大使館杯 3位</li>
                     <li>- [2021.03.31] ジャパンカップ 優勝</li>
                     <li>- [2020.11] かわしん杯 ブルー：ベスト8 ホワイト：ベスト16</li>
                     <li>- [2020.08.16] カルペソールサマーカップ 優勝</li>
