--- a/public/index.html
+++ b/public/index.html
@@ -731,7 +731,7 @@
                     <button type="button" class="btn btn-secondary">2024年</button>
                     <button type="button" class="btn btn-secondary">2023年</button>
                     <button type="button" class="btn btn-secondary">2022年</button
-                    <a class="btn btn-primary" href="https://drive.google.com/file/d/1WN3W6Bhn6nzMzJOeccqbypt5xQ-dAJ-J/view?usp=sharing"
+                    <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/1WknV_QaDN9qFo5C6YK8mU9xwA_D0-SEdyzP8Lkj1kDo/edit#gid=0"
                       role="button" target="_blank">2021年</a>
                   </div>
                 </div>
