--- a/public/index.html
+++ b/public/index.html
@@ -622,6 +622,7 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2021.11.23] Ｎリーグ（Aリーグ） 優勝</li>
                     <li>- [2021.09.11] Ｎリーグ（Ｂリーグ） 優勝</li>
                     <li>- [2020.12.20] 川崎低学年大会チャンピオンズリーグ 優勝</li>
                     <li>- [2020.10.25] 川崎市中原区春季低学年大会 優勝</li>
@@ -629,8 +630,7 @@
                     <li>- [2020.02.01] 平間カップ 準優勝</li>
                     <li>- [2020.01.13] 大ヶ谷戸杯 ブルー優勝 ホワイト5位</li>
                     <li>- [2019.12.15] フレネミー杯 優勝</li>
-                    <li>- [2019.12.01] BUDDY杯チャレンジカップ 5位</li>
-                  </ul>
+                   </ul>
                 </div>
               </div>
             </div>
