--- a/public/index.html
+++ b/public/index.html
@@ -716,7 +716,7 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
-                    <li>- (Comming Soon ...)</li>
+                    <li>- [2021.11.23] ラゾクラック杯1年生大会 優勝</li>
                   </ul>
                 </div>
               </div>
@@ -733,7 +733,7 @@
                     <button type="button" class="btn btn-secondary">2024年</button>
                     <button type="button" class="btn btn-secondary">2023年</button>
                     <button type="button" class="btn btn-secondary">2022年</button>
-                    <a class="btn btn-primary" href="https://drive.google.com/file/d/1B1D4P8HgfckFqHUhUQ2npKsdfrry8wiA/view?usp=sharing" role="button" target="_blank">2021年</a>
+                    <a class="btn btn-primary" href="https://drive.google.com/file/d/1KepQBKdupSh9DjT1fkmwwI8CI_A3YO7m/view?usp=sharing" role="button" target="_blank">2021年</a>
                   </div>
                 </div>
               </div>
