お知らせを追加

--- a/public/index.html
+++ b/public/index.html
@@ -156,10 +156,15 @@
 
         <div class="row justify-content-center">
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2021.4.1</h4>
+            <h4 class="info-date">2021.12.18</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            新年度 (2021年度) に対応いたしました。
+           <a href="#result_6">6年生</a> / <a href="#result_girl">少女（レジーナ）</a>
+           <br>
+            <a href="https://kawasaki-fa.com/u12/2021_matsumura_20211218_01/" target="_blank">
+              第40回松村杯PUMAカップ争奪秋季少年少女サッカー大会 にて、<br>
+              <b>少年の部 ベスト4、少女の部 3位</b></a>となりました。
+              <br>たくさんの応援、誠にありがとうございました。
             <!--
             11/7(土) キッズ体験会を開催いたしました。
             (<a href="https://www.instagram.com/p/CHRpiAfB0LT/?utm_source=ig_web_copy_link"
@@ -167,7 +172,21 @@
             <br><a href="#team-trial">体験入部</a>は全学年で可能ですので、ご興味がありましたら、ぜひご検討ください。
             -->
           </div>
+          
+          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+            <h4 class="info-date">2021.4.1</h4>
+          </div>
+          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+            新年度 (2021年度) に対応いたしました。
+            <!--
+              11/7(土) キッズ体験会を開催いたしました。
+              (<a href="https://www.instagram.com/p/CHRpiAfB0LT/?utm_source=ig_web_copy_link"
+              target="_blank">体験会の様子はこちら</a>)
+              <br><a href="#team-trial">体験入部</a>は全学年で可能ですので、ご興味がありましたら、ぜひご検討ください。
+            -->
+          </div>
         </div>
+      </div>
         <!--
         <div class="row justify-content-center">
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
@@ -462,6 +481,9 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2021.12.18] 第40回 松村杯争奪 秋季大会 ベスト4</li>
+                    <li>- [2021.10.16] JFA-U12リーグ Aブロック 1位(川崎 2位)</li>
+                    <li>- [2021.09.12] 第112回 湘南チャレンジ杯 U12 優勝</li>
                     <li>- [2021.05.05] 斎藤旗争奪第43回川崎市春季少年サッカー大会 ベスト4</li>
                     <li>- [2021.02.20] 第12回 川崎ケーブルテレビ杯 新人戦 サッカー大会 ベスト4</li>
                     <li>- [2021.02.13] 全力蹴球カップ チャンピオンシップ 3位</li>
