お知らせに SNS リンクを追加

--- a/public/index.html
+++ b/public/index.html
@@ -165,6 +165,9 @@
               第40回松村杯PUMAカップ争奪秋季少年少女サッカー大会 にて、<br>
               <b>少年の部 ベスト4、少女の部 3位</b></a>となりました。
               <br>たくさんの応援、誠にありがとうございました。
+              <br>(当日の様子は <a href="https://www.instagram.com/p/CXqc0uIDUAQ/?utm_source=ig_web_copy_link" target="_blank">FC中原 Instagram</a> や
+              <a href="https://www.facebook.com/fcnakahararegina" target="_blank">FC中原レジーナ Facebook</a> でもご紹介しています)
+
           </div>
           
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
