お知らせの表記を修正

--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,7 @@
             <h4 class="info-date">2021.12.18</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-           <a href="#result_6">6年生</a> / <a href="#result_girl">少女（レジーナ）</a>
+           <a href="#result_6">U12</a> / <a href="#result_girl">少女（レジーナ）</a>
            <br>
             <a href="https://kawasaki-fa.com/u12/2021_matsumura_20211218_01/" target="_blank">
               第40回松村杯PUMAカップ争奪秋季少年少女サッカー大会 にて、<br>
