6年生の戦績を追加

--- a/public/index.html
+++ b/public/index.html
@@ -478,6 +478,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2021.12.25-27] 第35回 横須賀カップ招待少年サッカー大会 優勝</li>
                   <li>- [2021.12.18] 第40回 松村杯争奪 秋季大会 ベスト4</li>
                   <li>- [2021.10.16] JFA-U12リーグ Aブロック 1位(川崎 2位)</li>
                   <li>- [2021.09.12] 第112回 湘南チャレンジ杯 U12 優勝</li>
