6年生 戦績を追記

--- a/public/index.html
+++ b/public/index.html
@@ -482,6 +482,7 @@
                   <li>- [2021.12.18] 第40回 松村杯争奪 秋季大会 ベスト4</li>
                   <li>- [2021.10.16] JFA-U12リーグ Aブロック 1位(川崎 2位)</li>
                   <li>- [2021.09.12] 第112回 湘南チャレンジ杯 U12 優勝</li>
+                  <li>- [2021.08.28] KJFカップ 優勝</li>
                   <li>- [2021.05.05] 斎藤旗争奪第43回川崎市春季少年サッカー大会 ベスト4</li>
                   <li>- [2021.02.20] 第12回 川崎ケーブルテレビ杯 新人戦 サッカー大会 ベスト4</li>
                   <li>- [2021.02.13] 全力蹴球カップ チャンピオンシップ 3位</li>
