--- a/public/index.html
+++ b/public/index.html
@@ -477,6 +477,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2022.01.16] 日産CUP争奪 第48回 神奈川県選手権大会 第21ブロック優勝 中央大会進出</li>
                   <li>- [2021.12.25-27] 第35回 横須賀カップ招待少年サッカー大会 優勝</li>
                   <li>- [2021.12.18] 第40回 松村杯争奪 秋季大会 ベスト4</li>
                   <li>- [2021.10.16] JFA-U12リーグ Aブロック 1位(川崎 2位)</li>
