--- a/public/index.html
+++ b/public/index.html
@@ -690,6 +690,8 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2022.02.20] MIHATA WINTER LEAGUE U-8 優勝</li>
+                  <li>- [2022.02.13] 野川キッカーズFC CUP U-8 準優勝</li>
                   <li>- [2021.11.20] JUNTOS CUP U-8 優勝</li>
                   <li>- [2021.10.24] ふらっとさんが行く！CUP U-8 準優勝</li>
                   <li>- [2021.07.11] 第38回川崎市春季低学年大会 ベスト8</li>
