--- a/public/index.html
+++ b/public/index.html
@@ -645,6 +645,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2021.03.06] 長谷工PREMIER LEAGUE Kanagawa U-9 優勝</li>
                   <li>- [2021.11.23] Ｎリーグ（Aリーグ） 優勝</li>
                   <li>- [2021.09.11] Ｎリーグ（Ｂリーグ） 優勝</li>
                   <li>- [2020.12.20] 川崎低学年大会チャンピオンズリーグ 優勝</li>
