--- a/public/index.html
+++ b/public/index.html
@@ -615,7 +615,9 @@
               <div class="col-lg-6 col-md-7">
                 <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                   <button type="button" class="btn btn-secondary">2023年</button>
-                  <button type="button" class="btn btn-secondary">2022年</button>
+                 <a class="btn btn-primary"
+                    href="https://docs.google.com/spreadsheets/d/1-PXnOeXrF0WuhOGsP3M9n0qnupoomRqY-fNdnYK7nJ4/edit#gid=0"
+                    role="button" target="_blanky">2022年</a>
                   <a class="btn btn-primary"
                     href="https://docs.google.com/spreadsheets/d/1k7ckDCcMAykJLQSnBba0FXeWhnazfNLHXqesx3BiuTU/edit#gid=0"
                     role="button" target="_blanky">2021年</a>
