--- a/public/index.html
+++ b/public/index.html
@@ -721,7 +721,8 @@
                   <button type="button" class="btn btn-secondary">2025年</button>
                   <button type="button" class="btn btn-secondary">2024年</button>
                   <button type="button" class="btn btn-secondary">2023年</button>
-                  <button type="button" class="btn btn-secondary">2022年</button>
+                  <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQoZ22jcDJ2hr96vmG9dEZISDHWPJIl59MRgke-i7etrvndoC_dhD-ClyEJmqAIBS4Fl6oidCBz3gew/pubhtml" role="button"
+                    target="_blank">2022年</a>
                   <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2013/result/result2.htm" role="button"
                     target="_blank">2021年</a>
                   <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2013/result/result1.htm" role="button"
