--- a/public/index.html
+++ b/public/index.html
@@ -695,6 +695,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2022.03.21] ラゾクラック杯2年生大会 準優勝</li>
                   <li>- [2022.02.23] 六会湘南台杯 U-8 準優勝</li>
                   <li>- [2022.02.20] MIHATA WINTER LEAGUE U-8 優勝</li>
                   <li>- [2022.02.13] 野川キッカーズFC CUP U-8 準優勝</li>
