2022年度に更新。各学年を変更。コメントを削除。お知らせを追加。部費を更新。

--- a/public/index.html
+++ b/public/index.html
@@ -127,13 +127,6 @@
 
             <div data-aos="fade-up" data-aos-delay="100">
               <a href="#team-schedule" class="btn smoothscroll btn-primary mr-2 mb-2">スケジュール</a>
-              <!--
-                <a href="doc/20201107_kids.pdf" class="btn smoothscroll btn-primary mr-2 mb-2" target="_blank">
-                  11/7(土) キッズ体験会 開催！
-                  <br>詳しくはこちら
-                </a>
-              -->
-
             </div>
           </div>
         </div>
@@ -155,50 +148,16 @@
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2021.12.18</h4>
-          </div>
-          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            <a href="#result_6">U12</a> / <a href="#result_girl">少女（レジーナ）</a>
-            <br>
-            <a href="https://kawasaki-fa.com/u12/2021_matsumura_20211218_01/" target="_blank">
-              第40回松村杯PUMAカップ争奪秋季少年少女サッカー大会 にて、<br>
-              <b>少年の部 ベスト4、少女の部 3位</b></a>となりました。
-            <br>たくさんの応援、誠にありがとうございました。
-            <br>(当日の様子は <a href="https://www.instagram.com/p/CXqc0uIDUAQ/?utm_source=ig_web_copy_link"
-              target="_blank">FC中原 Instagram</a> や
-            <a href="https://www.facebook.com/fcnakahararegina" target="_blank">FC中原レジーナ Facebook</a> でもご紹介しています)
-
-          </div>
 
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2021.4.1</h4>
+            <h4 class="info-date">2022.4.12</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            新年度 (2021年度) に対応いたしました。
-            <!--
-              11/7(土) キッズ体験会を開催いたしました。
-              (<a href="https://www.instagram.com/p/CHRpiAfB0LT/?utm_source=ig_web_copy_link"
-              target="_blank">体験会の様子はこちら</a>)
-              <br><a href="#team-trial">体験入部</a>は全学年で可能ですので、ご興味がありましたら、ぜひご検討ください。
-            -->
+            新年度 (2022年度) に対応いたしました。
           </div>
         </div>
       </div>
-      <!--
-        <div class="row justify-content-center">
-          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2020.10.15</h4>
-          </div>
-          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            <a href="doc/20201107_kids.pdf" target="_blank">
-              <font color="red">キッズ(未就学児) 練習体験会を開催いたします！！</font>
-              <br>日時: 2020/11/7 (土) 8:30-10:00 (8時より受付)
-              <br>場所: 等々力緑地 第1サッカー場
-            </a>
-          </div>
-        </div>
-      -->
+
   </div>
   </section>
 
@@ -244,14 +203,12 @@
           <div class="unit-4">
 
             <div class="unit-4-icon mr-4">
-              <!--<span class="text-primary flaticon-startup"></span>-->
               <span class="text-primary"><img src="fonts/flaticon/map64.png"></span>
             </div>
 
             <div>
               <h3>場所</h3>
               <p>主に、神奈川県川崎市中原区で活動しています。</p>
-              <!--<p><a href="#">Learn More</a></p>-->
             </div>
           </div>
         </div>
@@ -282,7 +239,7 @@
             <div class="unit-4-icon mr-4"><span class="text-primary"><img src="fonts/flaticon/cup64.png"></span></div>
             <div>
               <h3>費用</h3>
-              <p>部費として年間、キッズ¥6000、少女¥12000、小学生¥24000をいただいております。</p>
+              <p>部費は年間、キッズ¥6000、少女¥12000、小学１年生～２年生¥24000、小学３年生～６年生¥36000 となります。</p>
             </div>
           </div>
         </div>
@@ -465,73 +422,10 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_6">
-        <div class="card mb-4 shadow-sm" data-aos="fade-up">
-          <div class="card-header">
-            <h3>6年生</h3>
-          </div>
-          <div class="card-body text-primary">
-            <div class="row justify-content-center">
-              <div class="col-lg-6 col-md-5 team-photo-box">
-                <img src="images/fc2009.jpg" alt="Image" class="img-fluid team-photo">
-              </div>
-              <div class="col-lg-6 col-md-7">
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>- [2022.02.27] OZENJI カップ 2022 優勝</li>
-                  <li>- [2022.02.11] KITAMIKATA カップ 優勝</li>
-                  <li>- [2022.01.16] 日産CUP争奪 第48回 神奈川県選手権大会 第21ブロック優勝 中央大会進出</li>
-                  <li>- [2021.12.25-27] 第35回 横須賀カップ招待少年サッカー大会 優勝</li>
-                  <li>- [2021.12.18] 第40回 松村杯争奪 秋季大会 ベスト4</li>
-                  <li>- [2021.10.16] JFA-U12リーグ Aブロック 1位(川崎 2位)</li>
-                  <li>- [2021.09.12] 第112回 湘南チャレンジ杯 U12 優勝</li>
-                  <li>- [2021.08.28] KJFカップ 優勝</li>
-                  <li>- [2021.05.05] 斎藤旗争奪第43回川崎市春季少年サッカー大会 ベスト4</li>
-                  <li>- [2021.02.20] 第12回 川崎ケーブルテレビ杯 新人戦 サッカー大会 ベスト4</li>
-                  <li>- [2021.02.13] 全力蹴球カップ チャンピオンシップ 3位</li>
-                  <li>- [2020.12.20] 第12回 川崎ケーブルテレビ杯 新人戦 サッカー大会 中原区 1位</li>
-                  <li>- [2020.09.21] 第70回 湘南チャレンジ杯 優勝</li>
-                  <li>- [2020.09.19] 東住チャレンジカップ 優勝</li>
-                  <li>- [2020.07.23] 全力蹴球カップ 準優勝</li>
-                  <li>- [2019.10.27] LIGA DOKKOI 優勝</li>
-                  <li>- [2019.09.14-16] パーシモン杯 準優勝</li>
-                  <li>- [2019.08.12-14] 時の栖カップ 優勝</li>
-                  <li>- [2019.08.03-04] ミキFCサマーフェスタ 準優勝</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="card-footer">
-            <div class="row justify-content-center">
-              <div class="col-lg-3 col-md-5 card-footer-title">
-                各年度の試合結果
-              </div>
-              <div class="col-lg-6 col-md-7">
-                <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
-                  <a class="btn btn-primary"
-                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTNEPYl43M4tfcjpcxGjJrVjeTq0C6U7pt8Ez8fxAjuPLqKy2hGlRwwdRl8bxIs-Tg27ofoj5kg6wBA/pubhtml?gid=1323340164&single=true"
-                    role="button" target="_blank">2021年</a>
-                  <a class="btn btn-primary"
-                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTNEPYl43M4tfcjpcxGjJrVjeTq0C6U7pt8Ez8fxAjuPLqKy2hGlRwwdRl8bxIs-Tg27ofoj5kg6wBA/pubhtml?gid=1148299851&single=true"
-                    role="button" target="_blank">2020年</a>
-                  <a class="btn btn-primary"
-                    href="https://docs.google.com/spreadsheets/u/2/d/e/2PACX-1vTNEPYl43M4tfcjpcxGjJrVjeTq0C6U7pt8Ez8fxAjuPLqKy2hGlRwwdRl8bxIs-Tg27ofoj5kg6wBA/pubhtml?gid=2047554281&single=true"
-                    role="button" target="_blank">2019年</a>
-                  <a class="btn btn-primary"
-                    href="https://docs.google.com/spreadsheets/u/1/d/e/2PACX-1vTNEPYl43M4tfcjpcxGjJrVjeTq0C6U7pt8Ez8fxAjuPLqKy2hGlRwwdRl8bxIs-Tg27ofoj5kg6wBA/pubhtml?gid=111035019&single=true"
-                    role="button" target="_blank">2018年</a>
-                  <a class="btn btn-primary" href="result/fc2009/result2.htm" role="button" target="_blank">2017年</a>
-                  <a class="btn btn-primary" href="result/fc2009/result1.htm" role="button" target="_blank">2016年</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <div class="card-result" id="result_5">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>5年生</h3>
+            <h3>6年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -583,7 +477,7 @@
       <div class="card-result" id="result_4">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>4年生</h3>
+            <h3>5年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -638,7 +532,7 @@
       <div class="card-result" id="result_3">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>3年生</h3>
+            <h3>4年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -686,7 +580,7 @@
       <div class="card-result" id="result_2">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>2年生</h3>
+            <h3>3年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -738,7 +632,7 @@
       <div class="card-result" id="result_1">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>1年生</h3>
+            <h3>2年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -767,6 +661,43 @@
                   <a class="btn btn-primary"
                     href="https://drive.google.com/file/d/10Da7bEkFLI6LyNKR4XGs_n1Ow66BPGkA/view?usp=sharing"
                     role="button" target="_blank">2021年</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-result" id="result_1">
+        <div class="card mb-4 shadow-sm" data-aos="fade-up">
+          <div class="card-header">
+            <h3>1年生</h3>
+          </div>
+          <div class="card-body text-primary">
+            <div class="row justify-content-center">
+              <div class="col-lg-6 col-md-5 team-photo-box">
+                <!-- <img src="images/fc2014_02.jpg" alt="Image" class="img-fluid team-photo">-->
+              </div>
+              <div class="col-lg-6 col-md-7">
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>- (Comming Soon...)</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="card-footer">
+            <div class="row justify-content-center">
+              <div class="col-lg-3 col-md-5 card-footer-title">
+                各年度の試合結果
+              </div>
+              <div class="col-lg-6 col-md-7">
+                <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
+                  <button type="button" class="btn btn-secondary">2027年</button>
+                  <button type="button" class="btn btn-secondary">2026年</button>
+                  <button type="button" class="btn btn-secondary">2025年</button>
+                  <button type="button" class="btn btn-secondary">2024年</button>
+                  <button type="button" class="btn btn-secondary">2023年</button>
+                  <button type="button" class="btn btn-secondary">2022年</button>
                 </div>
               </div>
             </div>
