--- a/public/index.html
+++ b/public/index.html
@@ -563,7 +563,8 @@
                 <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                   <button type="button" class="btn btn-secondary">2024年</button>
                   <button type="button" class="btn btn-secondary">2023年</button>
-                  <button type="button" class="btn btn-secondary">2022年</button>
+                  <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result4.htm" role="button"
+                    target="_blank">2022年</a>
                   <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result3.htm" role="button"
                     target="_blank">2021年</a>
                   <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result2.htm" role="button"
