1年生の試合結果を追加。各学年へのリンクを修正

--- a/public/index.html
+++ b/public/index.html
@@ -422,7 +422,7 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_5">
+      <div class="card-result" id="result_6">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
             <h3>6年生</h3>
@@ -474,7 +474,7 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_4">
+      <div class="card-result" id="result_5">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
             <h3>5年生</h3>
@@ -529,7 +529,7 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_3">
+      <div class="card-result" id="result_4">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
             <h3>4年生</h3>
@@ -578,7 +578,7 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_2">
+      <div class="card-result" id="result_3">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
             <h3>3年生</h3>
@@ -630,7 +630,7 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_1">
+      <div class="card-result" id="result_2">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
             <h3>2年生</h3>
@@ -698,7 +698,9 @@
                   <button type="button" class="btn btn-secondary">2025年</button>
                   <button type="button" class="btn btn-secondary">2024年</button>
                   <button type="button" class="btn btn-secondary">2023年</button>
-                  <button type="button" class="btn btn-secondary">2022年</button>
+                  <a class="btn btn-primary"
+                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQml-50awLDy2Yq22UaStZcolrfhVFlPaIyzptU23drQNhz1G2M7ms8Fq7vt5Ujov4MGhnlOraJeJKI/pubhtml?gid=0&single=true"
+                    role="button" target="_blank">2022年</a>
                 </div>
               </div>
             </div>
