6年生の試合結果2022を追加

--- a/public/index.html
+++ b/public/index.html
@@ -454,7 +454,9 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
-                  <button type="button" class="btn btn-secondary">2022年</button>
+                  <a class="btn btn-primary"
+                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSP6tMP0sCqVee4DWb7qjiKsdRgOST0VePOJJB4b5Vxhqy5E6TkQKNxKtwuCltz2w/pubhtml?gid=1634873165&single=true"
+                    role="button" target="_blank">2022年</a>
                   <a class="btn btn-primary"
                     href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSzxx10-oc3nKnlxtXZW36fwnEgfU3P3hQmFEQiowjMMz452yZpSH4RRSSHLZsHaQ/pubhtml?gid=1634873165&single=true"
                     role="button" target="_blank">2021年</a>
