--- a/public/index.html
+++ b/public/index.html
@@ -638,11 +638,12 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <img src="images/fc2014_02.jpg" alt="Image" class="img-fluid team-photo">
+                <img src="images/fc2014_03.jpg" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
                   <li>- [2021.11.23] ラゾクラック杯1年生大会 優勝</li>
+                  <li>- [2022.05.03] 区長杯 準優勝</li
                 </ul>
               </div>
             </div>
