--- a/public/index.html
+++ b/public/index.html
@@ -659,7 +659,9 @@
                   <button type="button" class="btn btn-secondary">2025年</button>
                   <button type="button" class="btn btn-secondary">2024年</button>
                   <button type="button" class="btn btn-secondary">2023年</button>
-                  <button type="button" class="btn btn-secondary">2022年</button>
+                  <a class="btn btn-primary"
+                    href="https://drive.google.com/file/d/1qaJIP8AxgWihqMRnNpqBjexIyC1ddK4Z/view?usp=sharing"
+                    role="button" target="_blank">2022年</a>
                   <a class="btn btn-primary"
                     href="https://drive.google.com/file/d/10Da7bEkFLI6LyNKR4XGs_n1Ow66BPGkA/view?usp=sharing"
                     role="button" target="_blank">2021年</a>
