6年生　戦績更新

--- a/public/index.html
+++ b/public/index.html
@@ -434,6 +434,8 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2022.05.05] 斎藤旗杯 3位</li>
+                  <li>- [2022.01.22] 川崎ケーブルテレビ杯新人戦 ベスト16</li>
                   <li>- [2021.10.16] ハンガリー大使館杯 3位</li>
                   <li>- [2021.03.31] ジャパンカップ 優勝</li>
                   <li>- [2020.11] かわしん杯 ブルー：ベスト8 ホワイト：ベスト16</li>
