--- a/public/index.html
+++ b/public/index.html
@@ -644,8 +644,8 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>- [2021.11.23] ラゾクラック杯1年生大会 優勝</li>
-                  <li>- [2022.05.03] 川崎市中原区春季低学年大会（区長杯） 準優勝</li
+                  <li>- [2022.05.03] 川崎市中原区春季低学年大会（区長杯） 準優勝</li>
+                  <li>- [2021.11.23] ラゾクラック杯1年生大会 優勝</li
                 </ul>
               </div>
             </div>
